@@ -13,4 +13,7 @@ requires       'Time::HiRes'                        => '0';
 
 #test_requires  'Test::More'     => '0.88';
 
+# metadata for the github repo
+repository 'https://github.com/ikruglov/YAHC';
+
 WriteAll;
